<resources>
    <string name="app_name">Rom Control</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string-array name="nav_drawer_items">
        <item>SystemUI Mods</item>
        <item>Notification</item>
        <item>Call Mods</item>
        <item>Framework and General</item>
        <item>TW Launcher</item>
        <item>Dropdown</item>
        <item>Lockscreen</item>
        <item>Backup/Restore</item>
        <item>Set Theme</item>
    </string-array>
    <string-array name="network_pos_entries">
        <item>Right (Default)</item>
        <item>Left</item>
    </string-array>
    <string-array name="network_pos_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="switch_button_entries">
        <item>Lollipop Style</item>
        <item>Lg G3 Style</item>
        <item>Huawei Style</item>
        <item>Xperia Style</item>
    </string-array>
    <string-array name="switch_button_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="traffic_entries">
        <item>Disabled</item>
        <item>Outgoing</item>
        <item>Incoming</item>
        <item>Show Both</item>
    </string-array>
    <string-array name="traffic_unit_entries">
        <item>Bits per second</item>
        <item>Bytes per second</item>
    </string-array>
    <string-array name="traffic_unit_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="traffic_update_entries">
        <item>500 ms</item>
        <item>1000 ms</item>
        <item>1500 ms</item>
        <item>2000 ms</item>
    </string-array>
    <string-array name="traffic_update_values">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
    </string-array>
    <string-array name="traffic_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="incall_background_entries">
        <item>Stock</item>
        <item>Frog</item>
        <item>Love</item>
        <item>Kate Derr</item>
        <item>Mamas Boy</item>
        <item>Nature Girl</item>
        <item>Girl</item>
        <item>Flash</item>
        <item>Chevrolet SS</item>
        <item>Android</item>
    </string-array>
    <string-array name="incall_background_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="lockscreen_notif_entries">
        <item>2 (Stock)</item>
        <item>3 max shown</item>
        <item>4 max shown</item>
        <item>5 max shown</item>
    </string-array>
    <string-array name="lockscreen_notif_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="toggle_buttons_background_entries">
        <item>Default</item>
        <item>Convex</item>
        <item>Concave</item>
        <item>Glass</item>
        <item>Convex square</item>
        <item>Concave square</item>
        <item>Glass square</item>
        <item>Realms</item>
        <item>Magnifying glass</item>
        <item>Dark light</item>
        <item>Metal</item>
        <item>Leather</item>
        <item>Leather rounded</item>
        <item>Leather round</item>
    </string-array>
    <string-array name="toggle_buttons_background_values">
        <item>0</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="toggle_entries">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="toggle_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="call_delay_entries">
        <item>No delay</item>
        <item>1000ms</item>
        <item>2500ms</item>
        <item>Default (5000ms)</item>
    </string-array>
    <string-array name="call_delay_values">
        <item>0</item>
        <item>1000</item>
        <item>2500</item>
        <item>5000</item>
    </string-array>
    <string-array name="lockscreen_font_style_entries">
        <item>Android Clock</item>
        <item>Android Clock Highlight</item>
        <item>Android Clock Solid</item>
        <item>Archibald</item>
        <item>Caviar Dreams</item>
        <item>Choco Cooky</item>
        <item>Cutive Mono</item>
        <item>Cool Jazz</item>
        <item>Rosemary</item>
        <item>Ultima</item>
    </string-array>
    <string-array name="lockscreen_font_style_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="dialer_background_style_entries">
        <item>Anastasia Style</item>
        <item>Glassplate Style</item>
        <item>Gold Style</item>
        <item>Grill Style</item>
        <item>Mesh Style</item>
        <item>Motherboard Style</item>
        <item>Rainbow Style</item>
        <item>Round Style</item>
        <item>Silver Style</item>
        <item>Stone Style</item>
    </string-array>
    <string-array name="dialer_background_style_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="notification_panel_background_images_entries">
        <item>Batman</item>
        <item>Blue Abstract</item>
        <item>Flowers</item>
        <item>Halo</item>
        <item>Material 1</item>
        <item>Material 2</item>
        <item>Minions</item>
        <item>Soldier</item>
        <item>Nature</item>
    </string-array>
    <string-array name="notification_panel_background_images_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="clock_style_entries">
    <item>@string/right_clock</item>
    <item>@string/center_clock</item>
    <item>@string/left_clock</item>
</string-array>
<string-array name="clock_style_values">
<item>0</item>
<item>1</item>
<item>2</item>
</string-array>
<string-array name="entries_status_bar_am_pm">
<item>@string/am_pm_clock_none</item>
<item>@string/am_pm_clock_small</item>
<item>@string/am_pm_clock_normal</item>
</string-array>
<string-array name="values_status_bar_am_pm">
<item>0</item>
<item>1</item>
<item>2</item>
</string-array>
<string-array name="clock_date_style_entries">
<item>@string/clock_date_style_normal</item>
<item>@string/clock_date_style_lowercase</item>
<item>@string/clock_date_style_uppercase</item>
</string-array>
<string-array name="clock_date_style_values">
<item>0</item>
<item>1</item>
<item>2</item>
</string-array>
<string-array name="clock_date_format_entries">
<item>dd/MM/yy</item>
<item>MM/dd/yy</item>
<item>yyyy-MM-dd</item>
<item>yyyy-dd-MM</item>
<item>dd-MM-yyyy</item>
<item>MM-dd-yyyy</item>
<item>MMM dd</item>
<item>MMM dd, yyyy</item>
<item>MMMM dd, yyyy</item>
<item>EEE</item>
<item>EEE dd</item>
<item>EEE dd/MM</item>
<item>EEE MM/dd</item>
<item>EEE dd MMM</item>
<item>EEE MMM dd</item>
<item>EEE MMMM dd</item>
<item>EEEE dd/MM</item>
<item>EEEE MM/dd</item>
<item>@string/clock_date_format_custom</item>
</string-array>
    <string-array name="clock_date_format_entries_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
<string-array name="clock_date_display_entries">
<item>@string/clock_date_display_none</item>
<item>@string/clock_date_display_small</item>
<item>@string/clock_date_display_normal</item>
</string-array>
<string-array name="clock_date_display_values">
<item>0</item>
<item>1</item>
<item>2</item>
</string-array>
<string-array name="clock_font_style_entries">
<item>@string/clock_font_normal</item>
<item>@string/clock_font_italic</item>
<item>@string/clock_font_bold</item>
<item>@string/clock_font_bold_italic</item>
<item>@string/clock_font_light</item>
<item>@string/clock_font_light_italic</item>
<item>@string/clock_font_thin</item>
<item>@string/clock_font_thin_italic</item>
<item>@string/clock_font_condensed</item>
<item>@string/clock_font_condensed_italic</item>
<item>@string/clock_font_condensed_bold</item>
<item>@string/clock_font_condensed_bold_italic</item>
<item>@string/clock_font_medium</item>
<item>@string/clock_font_medium_italic</item>
</string-array>
<string-array name="clock_font_style_values">
<item>0</item>
<item>1</item>
<item>2</item>
<item>3</item>
<item>4</item>
<item>5</item>
<item>6</item>
<item>7</item>
<item>8</item>
<item>9</item>
<item>10</item>
<item>11</item>
<item>12</item>
<item>13</item>
</string-array>
<string-array name="clock_date_position_entries">
<item>@string/clock_date_left</item>
<item>@string/clock_date_right</item>
</string-array>
<string-array name="clock_date_position_values">
<item>0</item>
<item>1</item>
</string-array>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="dont_show">"Don't show"</string>
    <string name="clock_title_enable">Clock alignment</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="clock_color_title">Clock color</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_style_clock">Clock Style</string>
    <string name="status_bar_clock_title">Clock and date style</string>
    <string name="status_bar_clock_summary">Choose clock and date style</string>
    <string name="status_bar_show_clock_title">Show clock</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="am_pm_clock_none">NO AM/PM</string>
    <string name="am_pm_clock_small">Small</string>
    <string name="clock_use_second">Use second clock</string>
    <string name="clock_font_style_title">Clock font style</string>
    <string name="clock_font_size_title">Font size</string>
</resources>