<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/status_bar_clock_title" android:summary="Choose your position and Color" android:widgetLayout="@layout/round_more_icon" >
      <PreferenceCategory android:layout="@layout/preferences_category" android:title="Choose your Clock">
        <SwitchPreference android:title="@string/status_bar_show_clock_title" android:key="status_bar_clock" android:defaultValue="true" />
        <SwitchPreference android:title="@string/clock_use_second" android:key="clock_use_second" android:dependency="status_bar_clock" android:defaultValue="false" />
        <com.wubydax.romcontrol.prefs.SeekBarPreference android:max="23" android:title="@string/clock_font_size_title" android:key="statusbar_clock_font_size" android:dependency="status_bar_clock" android:defaultValue="14" unitsLeft="" min="4.0" unitsRight="dp" />
        <com.wubydax.romcontrol.prefs.ColorPickerPreference android:title="@string/clock_color_title" android:key="statusbar_clock_color" android:dependency="status_bar_clock" android:defaultValue="-1" alphaSlider="true" hexValue="true" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:defaultValue="0" android:entries="@array/clock_font_style_entries" android:title="@string/clock_font_style_title" android:key="statusbar_clock_font_style" android:dependency="status_bar_clock" android:entryValues="@array/clock_font_style_values" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:defaultValue="0" android:entries="@array/clock_style_entries" android:title="@string/clock_title_enable" android:key="statusbar_clock_style" android:dependency="status_bar_clock" android:entryValues="@array/clock_style_values" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:defaultValue="0" android:entries="@array/entries_status_bar_am_pm" android:title="@string/status_bar_am_pm_title" android:key="statusbar_clock_am_pm_style" android:dependency="status_bar_clock" android:dialogTitle="@string/status_bar_am_pm_title" android:entryValues="@array/values_status_bar_am_pm" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:defaultValue="0" android:entries="@array/clock_date_display_entries" android:title="@string/clock_date_display" android:key="statusbar_clock_date_display" android:summary="@string/clock_date_display_summary" android:dependency="status_bar_clock" android:entryValues="@array/clock_date_display_values" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:defaultValue="0" android:entries="@array/clock_date_position_entries" android:title="@string/clock_date_format" android:key="statusbar_clock_date_position" android:dependency="status_bar_clock" android:entryValues="@array/clock_date_position_values" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:defaultValue="0" android:entries="@array/clock_date_style_entries" android:title="@string/clock_date_style" android:key="statusbar_clock_date_style" android:dependency="status_bar_clock" android:entryValues="@array/clock_date_style_values" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:defaultValue="0" android:entries="@array/clock_date_format_entries" android:title="@string/clock_date_format" android:key="statusbar_clock_date_format" android:dependency="status_bar_clock" android:entryValues="@array/clock_date_format_entries" />
      </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="Icon and battery" android:summary="Show or Hide Icon" android:widgetLayout="@layout/round_more_icon" >
      <PreferenceCategory android:layout="@layout/preferences_category" android:title="Statusbar Mods">
        <SwitchPreference android:title="Stock Battery" android:key="hide_battery_stock" android:defaultValue="false" android:summaryOn="Show" android:summaryOff="Hide" />
        <SwitchPreference android:title="3Minit Battery" android:key="minit_battery_visible" android:defaultValue="true" android:summaryOn="Show" android:summaryOff="Hide" />
        <SwitchPreference android:title="Display Percentage Battery" android:defaultValue="false" android:key="display_battery_percentage" android:summaryOn="Battery text shown" android:summaryOff="Battery text is hidden" />
        <SwitchPreference android:title="Hide Alarm Icon" android:key="statusbar_hide_alarm" android:summaryOn="Alarm icon is visible." android:summaryOff="Alarm icon is hidden." android:defaultValue="false" />
        <SwitchPreference android:title="Hide Bluetooth Icon" android:key="statusbar_hide_bluetooth" android:summaryOn="Bluetooth Icon is visible." android:summaryOff="Bluetooth Icon is hidden." android:defaultValue="false" />
        <SwitchPreference android:title="Show memCleanView" android:key="pekaka_memCleanView" android:summaryOn="Enabled" android:summaryOff="Disabled" />
        <com.wubydax.romcontrol.prefs.ColorPickerPreference android:title="Memkiller color" android:key="db_inkeffect_pekaka_memkiller_picker" android:defaultValue="-13959424" alphaSlider="true" hexValue="true" />
      </PreferenceCategory>
        <PreferenceCategory android:layout="@layout/preferences_category" android:title="Icon Colors">
            <com.wubydax.romcontrol.prefs.ColorPickerPreference android:title="WiFi Icon Color" android:key="statusbar_wifi_color" android:summary="Pick color of wifi icon" hexValue="true"/>
            <com.wubydax.romcontrol.prefs.ColorPickerPreference android:title="Signalbar Icon Color" android:key="statusbar_signal_color" android:summary="Select color of signalbars" hexValue="true"/>
            <com.wubydax.romcontrol.prefs.ColorPickerPreference android:title="Data Icon Color" android:key="statusbar_data_color" android:summary="3G/4G/LTE data icon color" hexValue="true"/>
            <com.wubydax.romcontrol.prefs.ColorPickerPreference android:title="Download Booster Icon" android:key="statusbar_db_color" android:summary="Set icon color" hexValue="true"/>
            <com.wubydax.romcontrol.prefs.ColorPickerPreference android:title="Notification Icons Color" android:key="statusbar_icon_color" android:summary="Volume, bluetooth, popups, etc.." hexValue="true"/>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="Network Traffic" android:summary="Choose your Preference" android:widgetLayout="@layout/round_more_icon">
      <PreferenceCategory android:layout="@layout/preferences_category" android:title="Network Traffic">
        <com.wubydax.romcontrol.prefs.ColorPickerPreference alphaSlider="true" hexValue="true" android:title="Network Speed Color" android:key="network_traffic_color" android:summary="Color of network speed text" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:entries="@array/traffic_entries" android:title="Traffic Meter Type" android:key="network_traffic_state" android:summary="%s" android:widgetLayout="@layout/round_more_icon" android:entryValues="@array/traffic_values" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:entries="@array/traffic_update_entries" android:title="Meter Update Frequency" android:key="network_traffic_period" android:summary="%s" android:widgetLayout="@layout/round_more_icon" android:entryValues="@array/traffic_update_values" />
        <com.wubydax.romcontrol.prefs.MyListPreference android:entries="@array/traffic_unit_entries" android:title="Display Unit" android:key="network_traffic_unit" android:summary="%s" android:widgetLayout="@layout/round_more_icon" android:entryValues="@array/traffic_unit_values" />
        <SwitchPreference android:title="Autohide Meter" android:key="network_traffic_autohide" android:summaryOn="Network traffic will autohide" android:summaryOff="Network traffic always shown" />
        <com.wubydax.romcontrol.prefs.SeekBarPreference android:max="100" android:title="Autohide Threshold" android:key="network_traffic_autohide_threshold" android:dependency="network_traffic_autohide" />
       </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:key="com.potato.gradientapp.MainActivity" android:summary="Opens Gradient potato App" android:title="Choose your color of Statusbar" />
</PreferenceScreen>